[package]
name = "bridge_bitcoin"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
hex = "0.4.3"
bitcoin = "0.28.1"
bs58 = "0.4.0"
candid = "0.9.9"
ic-cdk = "0.11.1"
serde = "1"
ripemd = "0.1.1"
ic-cdk-timers = "0.1.1"
ic-cdk-macros = "0.6.0"
rlp = "0.5.2"
sha2 = "0.10.6"
tx-from-scratch = "0.1.0"
serde_json = "1.0.39"
fastrand = "2.0.0"